#                                                                              #
#                ===== PLEASE DO NOT DELETE THIS HEADER ====                   #
################################################################################
          1         2         3         4         5         6         7
01234567890123456789012345678901234567890123456789012345678901234567890123456789

DG-2011-03-25-0: Cleanup:     fixed minor issues in man pages

DG-2011-03-24-1: Bugfix:      fixed test-drmaa.1.0 segmentation fault
                 Review:      SH

DG-2011-03-24-0: Cleanup:     added grid engine logo

EB-2011-03-23-2: Bugfix:      qconf segfaults on bad subordination string 
                 Issue:       GE-3326
                 Review:      TBD

EB-2011-03-23-1: Bugfix:      o Fixed broken build due to EB-2011-03-22-0
                              o Fixed make dependency bug in 3rdparty/remote 
                 Review:      TBD

EB-2011-03-23-0: Cleanup:     Removed authuser
                 Issue:       GE-3345
                 Review:      TBD

HP-2011-03-22-0: Bugfix:      qrsh -pty yes converts NL line breaks in CR NL
                              line breaks, corrupting the output on Unix/Linux
                 Issue:       GE-3382
					  Review:      TBD

EB-2011-03-22-0: Bugfix:      o When supplementary group id cannot be set the 
                                queue is set into error state
                              o Setting of supplementary group id might fail on 
                                Mac OS X
                 Issues:      GE-3400 GE-3412
                 Review:      TBD

SH-2011-03-22-0: Enhancem.:   Added qsub -pty switch
                 Issue:       GE-3095
                 Review:      HP (GE-24)

DG-2011-03-22-1: Enhancem.:   Enabled core binding on Linux hosts per default.
                 Issue:       GE-3351
                 Review:      JG

DG-2011-03-22-0: Enhancem.:   Removed BDB RPC from command line installer.