@@ -173,7 +173,11 @@ static long ptf_min_priority = -999;
 static int max_dynamic_event_clients = 99;
 static bool keep_active = false;
 static bool enable_windomacc = false;
+#ifdef LINUX
+static bool enable_binding = true;
+#else
 static bool enable_binding = false;
+#endif
 static bool enable_addgrp_kill = false;
 static u_long32 pdc_interval = 1;
 static char s_descriptors[100];
@@ -842,7 +846,11 @@ int merge_configuration(lList **answer_list, u_long32 progid, const char *cell_r
       ptf_min_priority = -999;
       keep_active = false;
       enable_windomacc = false;
+#ifdef LINUX
+      enable_binding = true;
+#else
       enable_binding = false;
+#endif
       enable_addgrp_kill = false;
       use_qsub_gid = false;
       prof_execd_thrd = false;
