@@ -8,6 +8,11 @@
           1         2         3         4         5         6         7
 01234567890123456789012345678901234567890123456789012345678901234567890123456789
 
+DG-2011-03-28-0: Cleanup:     changed execd_param set in installation to 
+                              compiled in parameter value
+                 Belongs to:  DG-2011-03-22-1
+		 Review:      EB
+
 DG-2011-03-25-0: Cleanup:     fixed minor issues in man pages
 
 DG-2011-03-24-1: Bugfix:      fixed test-drmaa.1.0 segmentation fault
